Modificada la clase ServicioDBpediaImpl
Se termina la función ObtenerInformacionSitioTuristico() y se crea una funcion que extrae el nombre de una url de wikipedia